[package]
authors    = ["ivanpierre <me@ivanpierre.world>"]
categories = ["compiler"]
edition    = "2018"
keywords   = ["clojure", "rust", "interpreter", "compiler", "repl"]
license    = "MPL-2.0+"
name       = "clojurust-macros"
readme     = "./README.md"
repository = "https://github.com/clojurust/clojurust"
version    = "0.0.0-alpha"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
path       = "./src/lib.rs"
proc-macro = true

# docs.rs-specific configuration
[package.metadata.docs.rs]

# document all features
all-features = true

# defines the configuration attribute
rustdoc-args = [
    "--lib",
    "--bins",
    "--open",
    "--package",
    "clojurust-macro",
    "--exemples",
    "--tests",
    "--benches",
]
